Fixed issues with missing text when viewed on mobile browser

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -51,7 +51,6 @@ textarea {
 
 #title-bar-wrapper {
   height: 50px;
-  /*min-width: 960px;*/
   background-image: -moz-linear-gradient(top, #123456, #222222);
   background-image: -ms-linear-gradient(top, #123456, #222222);
   background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#123456), to(#222222));
@@ -60,16 +59,17 @@ textarea {
   background-image: linear-gradient(top, #123456, #222222);
 }
 
-#title-bar {
-  position: relative;
-  height: 40px;
-  padding-top: 13px;
-  overflow: hidden;
-  h2 {
-    color: #fff;
-    text-align: left;
-    margin-left: 50px;
-  }
+.container>h2 {
+    float: left;
+    margin-left: 5px;
+    font-size: 1.7em;
+    color: white;
+    /*text-transform: uppercase;*/
+    letter-spacing: -1px;
+    padding-top: 9px;
+    font-weight: bold;
+    line-height: 1;
+
 }
 
 .content-wrapper {
@@ -85,6 +85,8 @@ textarea {
 }
 
 .title-list {
+  float: left;
+  min-width: 200px;
   padding-left:70px;
   font-weight: bold;
 }
@@ -102,25 +104,16 @@ textarea {
 
 .episode-list {
   text-decoration: none;
+  float: left;
   h2 {
     text-align: left;
     padding-top: 5px;  
-  }
-  >ul {
-    list-style: none;  
-  }
-  >li {
-    margin-left: -110px;  
   }
 }
 
 .accordian-heading {
   font-size: 15px;
   border-bottom: 1px solid lightBlue;
-}
-
-.accordian-body {
-  margin-top: -20px;
 }
 
 .floating-button {
@@ -184,7 +177,6 @@ p {
     text-decoration: none;
   }
 }
-
 
 /* footer */
 
